<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOne"
        android:elevation="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="366dp" />

    <ImageButton
        android:id="@+id/left_arrow"
        android:layout_width="@dimen/arrow_back_width"
        android:layout_height="@dimen/arrow_back_height"
        android:background="@null"
        android:contentDescription="@string/left_arrow"
        android:elevation="1dp"
        android:src="@drawable/baseline_arrow_back_black_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/more_vert"
        android:layout_width="@dimen/vert_width"
        android:layout_height="@dimen/vert_height"
        android:background="@null"
        android:contentDescription="@string/more_vert"
        android:elevation="1dp"
        android:src="@drawable/baseline_more_vert__black24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_image_full"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_full"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/shadow_profile_image_down"
        android:layout_width="0dp"
        android:layout_height="@dimen/shadow_down_height"
        android:background="@drawable/shadow_down"
        app:layout_constraintBottom_toBottomOf="@id/guidelineOne"
        app:layout_constraintEnd_toEndOf="@id/guidelineOne"
        app:layout_constraintStart_toStartOf="@id/guidelineOne" />

    <View
        android:id="@+id/shadow_profile_image_up"
        android:layout_width="0dp"
        android:layout_height="@dimen/shadow_up_height"
        android:background="@drawable/shadow_app_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:text="@string/profile_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_32"
        app:layout_constraintBottom_toTopOf="@+id/subscribers"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/subscribers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_16"
        android:text="@string/subscribers_number"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toTopOf="@+id/guidelineOne"
        app:layout_constraintStart_toStartOf="@id/profile_name" />

    <View
        android:id="@+id/divider_appBar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineOne" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginVertical="@dimen/spacing_8"
        android:text="@string/info"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineOne" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_qr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/group_height"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info">

        <TextView
            android:id="@+id/profile_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_link"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/invite_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_link"
            app:layout_constraintStart_toStartOf="@id/profile_link"
            app:layout_constraintTop_toBottomOf="@id/profile_link" />

        <ImageButton
            android:id="@+id/qr"
            android:layout_width="@dimen/qr_width"
            android:layout_height="@dimen/qr_height"
            android:background="@null"
            android:contentDescription="@string/qr_icon"
            android:src="@drawable/baseline_qr_code_24"
            app:layout_constraintBottom_toBottomOf="@id/invite_link"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider_group"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginVertical="@dimen/spacing_8"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="@id/linear_qr"
        app:layout_constraintTop_toBottomOf="@id/linear_qr" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_notification"
        android:layout_width="match_parent"
        android:layout_height="@dimen/group_height"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_qr">

        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            app:layout_constraintStart_toStartOf="@id/notification"
            app:layout_constraintTop_toBottomOf="@id/notification" />

        <View
            android:id="@+id/divider_horizontal"
            android:layout_width="1dp"
            android:layout_height="@dimen/divider_horizontal_height"
            android:layout_marginTop="@dimen/spacing_4"
            android:layout_marginEnd="@dimen/spacing_8"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@id/off"
            app:layout_constraintEnd_toStartOf="@id/switchCompat"
            app:layout_constraintTop_toTopOf="@id/switchCompat" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/off"
            android:contentDescription="notify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/notification" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_seperate"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginVertical="@dimen/spacing_16"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_notification" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_seperate">

        <TextView
            android:id="@+id/media"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/media"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintBottom_toBottomOf="@id/linear_group"
            app:layout_constraintEnd_toStartOf="@id/Files"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/linear_group"
            app:layout_constraintTop_toTopOf="@id/linear_group" />


        <TextView
            android:id="@+id/Files"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/files"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintBottom_toBottomOf="@id/linear_group"
            app:layout_constraintEnd_toStartOf="@id/links"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/media"
            app:layout_constraintTop_toTopOf="@id/linear_group" />

        <TextView
            android:id="@+id/links"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/links"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintBottom_toBottomOf="@id/linear_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/Files"
            app:layout_constraintTop_toTopOf="@id/linear_group" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:id="@+id/linear_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_group">

        <ImageView
            android:id="@+id/image_1"
            style="@style/media_image" />

        <ImageView
            android:id="@+id/image_2"
            style="@style/media_image" />

        <ImageView
            android:id="@+id/image_3"
            style="@style/media_image" />

        <ImageView
            android:id="@+id/image_4"
            style="@style/media_image" />

        <ImageView
            android:id="@+id/image_5"
            style="@style/media_image" />

        <ImageView
            android:id="@+id/image_6"
            style="@style/media_image" />
    </GridLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>